# 1_D_Euler

./: CMakeLists.txt  README.md  plot_Euler.py  plot_Show.py
apps/: main.c
include/: Euler_exact.h  Gauss_quadrature.h  Legendre_basis.h  TVD_Limiter.h  Types.h  initial_conditions.h  io_utils.h  spatial_discretization.h  time_integration.h  time_intergration.h
src/: Euler_exact.c  Gauss_quadrature.c  Legendre_basis.c  TVD_Limiter.c  initial_conditions.c  io_utils.c  spatial_discretization.c  time_integration.c  time_intergration.c
